--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,4 +27,4 @@ jobs:
  
       - name: Execute Tests
         run: |
-          java -jar target/a_new2-1.0.0-jar-with-dependencies  # Update path based on build output 
+          java -jar target/new2.jar  # Update path based on build output
