--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,4 +31,4 @@ jobs:
  
       - name: Execute Tests
         run: |
-          java -jar target/new2.jar  # Update path based on build output
+          java -jar target/new2-1.0.0-jar-with-dependencies.jar  # Update path based on build output
